Kubernetes/30Mar2022/dockerdemo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dockerdemometadata
  labels:
    app: dockerdemo  
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dockerdemo
  template:
    metadata:
      labels:
        app: dockerdemo
    spec:
      containers:
      - name: dockerdemo
        image: dockerdemo
        imagePullPolicy: Never        
        ports:
        - containerPort: 80
